--- a/index.html
+++ b/index.html
@@ -9,67 +9,54 @@
   </head>
 
   <body>
-    <div id="myside-bar">
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact Us </a>
-    </div>
-
-    <div class="jumbotron">
-      <img src="img/logoBig.png" id="logo">
-      <p>We Provide The Best Food <br/></p>
-      <p>At The Right Price</p>
-    </div>
-
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-3 bg-1">
-
-          <div class="col-md-12 bg-0">
-            <div class="happy">
-              <div class="text" style="color:#000000;">Happy Hour</div>
-            </div>
-          </div>
-
-          <div class="col-md-12 bg-00">
-            <div class="happy">
-              <div class="text">Party Time</div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3 bg-1">
-          <img src="img/breakfast.jpg" class="img-responsive" style="display:inline" alt="Breakfast" width="100%" height="100%">
-          <div class="overlay-mini">
-            <div class="text">Breakfast</div>
-          </div>
-        </div>
-
-        <div class="col-md-3 bg-1">
-          <img src="img/lunch.jpg" class="img-responsive" style="display:inline" alt="Lunch" width="100%" height="100%">
-          <div class="overlay-mini">
-            <div class="text">Lunch</div>
-          </div>
-        </div>
-
-        <div class="col-md-3 bg-1">
-          <img src="img/dinner.jpg" class="img-responsive" style="display:inline" alt="Dinner" width="100%" height="100%">
-          <div class="overlay-mini">
-            <div class="text">Dinner</div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container">
-      <div class="img_fastFoods">
-        <img src="img/fastFood1.jpg" />
-        <img src="img/fastFood2.jpg" />
+
+
+
+      <div class="jumbotron">
+        <div id="mySidenar class=" sidenav ">
+
+        <a href="# ">Home</a>
+        <a href="# ">Services</a>
+        <a href="# ">Clients</a>
+        <a href="# ">Contact Us </a>
+
       </div>
 
-      <div class="text_fastFood">
+
+        <img src="img/logoBig.png " id="logo ">
+        <p>We Provide The Best Food <br/></p>
+        <p>At The Right Price</p>
+    </div>
+
+
+      <div class="container dip ">
+      <div class="row ">
+          <div class="col ">
+                <p>Happy Hour</p>
+                <p>Party Time </p>
+
+          </div>
+          <div class="col ">
+               <img src="img/breakfast.jpg " />
+          </div>
+          <div class="col ">
+            <img src="img/lunch.jpg "
+          </div>
+          <div class="col ">
+            <img src="img/dinner.jpg "
+          </div>
+      </div>
+</div>
+
+    <div class="container ">
+      <div class="img_fastFoods ">
+        <img src="img/fastFood1.jpg " />
+        <img src="img/fastFood2.jpg " />
+      </div>
+
+      <div class="text_fastFood ">
         <h2>Fast Food</h2>
         <h3>You will love our delicious food</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -77,13 +64,13 @@
           desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
       </div>
     </div>
-    <div class="container">
-      <div class="img_drinks">
-        <img src="img/drink1.jpg" />
-        <img src="img/drink2.jpg" />
+    <div class="container ">
+      <div class="img_drinks ">
+        <img src="img/drink1.jpg " />
+        <img src="img/drink2.jpg " />
       </div>
 
-      <div class="text_drink">
+      <div class="text_drink ">
         <h2>Fast Food</h2>
         <h3>You will love our delicious food</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
@@ -91,54 +78,53 @@
           desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       </div>
     </div>
-<div class="container">
+<div class="container ">
   <div class="jumbotron class="jum2">
-    <img src="img/beefBurger.jpg" class="rounded float-left" alt="beef burger">
-    <img src="img/chickenBurger.jpg" class="rounded float-left" alt="chicken burger">
-    <img src="img/chickenPizza.jpg" class="rounded float-left" alt="chicken pizza">
-  </div>
-</div>
+          <img src="img/beefBurger.jpg" class="rounded float-left" alt="beef burger">
+          <img src="img/chickenBurger.jpg" class="rounded float-left" alt="chicken burger">
+          <img src="img/chickenPizza.jpg" class="rounded float-left" alt="chicken pizza">
+        </div>
+      </div>
 
-<div class="well">
-  <h1>Our Happy Customer</h1>
-  <p> George Richard </br>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies, leo vel finibus elementum, tellus lorem molestie metus, </p>
-  <img src="img/p1.png" />
-  <img src="img/p2.png" />
-  <img src="img/p3.png" />
-  <div class="about">
-    <h2>About Me</h2>
-    <p>
-      We are a team of seven.Ut wisi oncus et pellentesque. Molestie cras facilisis risus blandit, vel ab, vitae volutpat nam elementum donec, potenti mollis a rutrum, nunc in sit. Duis aenean leo dolor neque nec suspendisse, aptent per phasellus, nec orci viverra. Integer sit, nunc ac tempus nulla at, duis accumsan erat gravida. Vestibulum nec, eget a pede ipsum fringilla feugiat, ipsum rhoncus augue commodo consequat massa torquent. Dolor elit. Auctor augue. Habitant vitae
-    </p>
-  </div>
+      <div class="well">
+        <h1>Our Happy Customer</h1>
+        <p> George Richard </br>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies, leo vel finibus elementum, tellus lorem molestie metus, </p>
+        <img src="img/p1.png" />
+        <img src="img/p2.png" />
+        <img src="img/p3.png" />
+        <div class="about">
+          <h2>About Me</h2>
+          <p>
+            We are a team of seven.Ut wisi oncus et pellentesque. Molestie cras facilisis risus blandit, vel ab, vitae volutpat nam elementum donec, potenti mollis a rutrum, nunc in sit. Duis aenean leo dolor neque nec suspendisse, aptent per phasellus, nec orci
+            viverra. Integer sit, nunc ac tempus nulla at, duis accumsan erat gravida. Vestibulum nec, eget a pede ipsum fringilla feugiat, ipsum rhoncus augue commodo consequat massa torquent. Dolor elit. Auctor augue. Habitant vitae
+          </p>
+        </div>
 
-</div>
+      </div>
 
-<div class="container-fluid">
-  <h2>Get our daily food items delivered to your email</h2>
-  <form>
-    <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-  </div>
-  <button type="button" class="btn btn-primary btn-lg">SUBMIT</button>
-  </form>
-</div>
-<div class="container">
+      <div class="container-fluid">
+        <h2>Get our daily food items delivered to your email</h2>
+        <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Email address</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" </div>
+            <button type="button" class="btn btn-primary btn-lg">SUBMIT</button>
+        </form>
+        </div>
+        <div class="container">
 
-</div>
-<div class="lastly">
-	<img src="img/logo_white.png"> MENU<br/>
-	Thats what we are<br/>
-	<img src="img/facebook.png">
-	<img src="img/pinterest.png">
-	<img src="img/twitter.png"><br/>
-	<span class="icons">2017 menu restrant</span>
+        </div>
+        <div class="lastly">
+          <img src="img/logo_white.png"> MENU<br/> Thats what we are<br/>
+          <img src="img/facebook.png">
+          <img src="img/pinterest.png">
+          <img src="img/twitter.png"><br/>
+          <span class="icons">2017 menu restrant</span>
 
 
-</div>
-
+        </div>
+      </div>
   </body>
 
 
