adding html frame work

--- a/index.html
+++ b/index.html
@@ -10,121 +10,253 @@
 
   <body>
 
-    <div class="container">
+    <div class="headernav">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  </div>
 
-
-
-      <div class="jumbotron">
-        <div id="mySidenar class=" sidenav ">
-
-        <a href="# ">Home</a>
-        <a href="# ">Services</a>
-        <a href="# ">Clients</a>
-        <a href="# ">Contact Us </a>
-
-      </div>
-
-
-        <img src="img/logoBig.png " id="logo ">
-        <p>We Provide The Best Food <br/></p>
-        <p>At The Right Price</p>
-    </div>
-
-
-      <div class="container dip ">
-      <div class="row ">
-          <div class="col ">
-                <p>Happy Hour</p>
-                <p>Party Time </p>
-
-          </div>
-          <div class="col ">
-               <img src="img/breakfast.jpg " />
-          </div>
-          <div class="col ">
-            <img src="img/lunch.jpg "
-          </div>
-          <div class="col ">
-            <img src="img/dinner.jpg "
-          </div>
-      </div>
+  <img class="bg-image" src="images/landing.jpg">
+  <div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
+    <a href="#">About</a>
+    <a href="#">events</a>
+    <a href="#">Contact</a>
+  </div>
 </div>
 
-    <div class="container ">
-      <div class="img_fastFoods ">
-        <img src="img/fastFood1.jpg " />
-        <img src="img/fastFood2.jpg " />
-      </div>
+  <div class="middle">
+    <img src="images/logoBig.png" alt="logo" class="text-center">
+    <br/>
+    <p>We Provide The Best Food
+      <p>
+        <p>At the<strong> right price<strong></p>
+  </div>
+</div>
 
-      <div class="text_fastFood ">
+
+  <div class="row">
+            <div class="col-md-3">
+              <ul>
+                <li><a href="#">Happy hour</a></li>
+                <li><a href="#">Party Time</a></li>
+
+              </ul>
+            </div>
+
+            <div class="col-md-3">
+
+              <img id="b-fast" src="images/breakfast.jpg">
+              <a class="one"> Breakfast</a>
+
+          </div>
+
+            <div class="col-md-3" >
+              <img id="lunch" src="images/lunch.jpg">
+              <a class="one"> Lunch</a>
+            </div>
+
+              <div class="col-md-3">
+
+              <img id="dinner" src="images/dinner.jpg">
+              <a class="one"> Dinner</a>
+
+    </div>
+  </div>
+<br></br>
+<div class="container">
+<div id="fastfood">
+<div class="row">
+  <div class="col-md-6">
+    <div class="images">
+      <img src="images/fastFood1.jpg" >
+      <img src="images/fastFood2.jpg" >
+    </div>
+    </div>
+  <div class="col-md-6">
         <h2>Fast Food</h2>
-        <h3>You will love our delicious food</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        <h4>You'll love our delicious food.</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+        </p>
+         <button class="btn btn-outline-primary">VIEW GALLERY &#8594;</button>
+      </div>
       </div>
     </div>
-    <div class="container ">
-      <div class="img_drinks ">
-        <img src="img/drink1.jpg " />
-        <img src="img/drink2.jpg " />
+    <div class="container">
+<div id="Drinks">
+    <div class="row">
+
+      <div class="col-md-6">
+        <h2>Drinks</h2>
+        <h4>We also produce delicious drinks.</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+        </p>
+        <a href="" class="btn btn-outline-primary">VIEW GALLERY &#8594;</a>
       </div>
 
-      <div class="text_drink ">
-        <h2>Fast Food</h2>
-        <h3>You will love our delicious food</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-          It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
-          desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <div class="col-md-6">
+        <div class="images">
+        <img src="images/drink1.jpg">
+        <img src="images/drink2.jpg">
+      </div>
+</div>
+</div>
+      </div>
       </div>
     </div>
-<div class="container ">
-  <div class="jumbotron class="jum2">
-          <img src="img/beefBurger.jpg" class="rounded float-left" alt="beef burger">
-          <img src="img/chickenBurger.jpg" class="rounded float-left" alt="chicken burger">
-          <img src="img/chickenPizza.jpg" class="rounded float-left" alt="chicken pizza">
-        </div>
-      </div>
+    <br><br>
+    <div class="row" id="panel">
 
-      <div class="well">
-        <h1>Our Happy Customer</h1>
-        <p> George Richard </br>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ultricies, leo vel finibus elementum, tellus lorem molestie metus, </p>
-        <img src="img/p1.png" />
-        <img src="img/p2.png" />
-        <img src="img/p3.png" />
-        <div class="about">
-          <h2>About Me</h2>
-          <p>
-            We are a team of seven.Ut wisi oncus et pellentesque. Molestie cras facilisis risus blandit, vel ab, vitae volutpat nam elementum donec, potenti mollis a rutrum, nunc in sit. Duis aenean leo dolor neque nec suspendisse, aptent per phasellus, nec orci
-            viverra. Integer sit, nunc ac tempus nulla at, duis accumsan erat gravida. Vestibulum nec, eget a pede ipsum fringilla feugiat, ipsum rhoncus augue commodo consequat massa torquent. Dolor elit. Auctor augue. Habitant vitae
-          </p>
-        </div>
-
-      </div>
-
-      <div class="container-fluid">
-        <h2>Get our daily food items delivered to your email</h2>
-        <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" </div>
-            <button type="button" class="btn btn-primary btn-lg">SUBMIT</button>
-        </form>
-        </div>
-        <div class="container">
-
-        </div>
-        <div class="lastly">
-          <img src="img/logo_white.png"> MENU<br/> Thats what we are<br/>
-          <img src="img/facebook.png">
-          <img src="img/pinterest.png">
-          <img src="img/twitter.png"><br/>
-          <span class="icons">2017 menu restrant</span>
+      		<div class="row" id="divcover">
+      		<div  class="bs-example bs-example-tabs " data-example-id="togglable-tabs"
+      		style="background-color: #fff;">
+      			<ul class="nav nav-tabs" id="myTabs" role="tablist" style="background-color: #c5c2bd; width:100%;">
+      				<li role="presentation" class="active"><a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">Fast Foods</a></li>
+      				<li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Drinks</a></li>
+      				  <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Chicken</a></li>
+      				   <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Rice</a></li>
 
 
-        </div>
-      </div>
+      					</ul>
+      					<div class="tab-content" id="myTabContent">
+      						<div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="home-tab">
+
+      							<div class="row"
+      							style="padding: 20px;padding-right: 35px;padding-left: 35px;">
+      								<span id="spanleft"><</span>
+      								<div class="col-md-4">
+
+      									<div class="patel">
+      										<img style="margin-bottom: 10px;" src="images/beefBurger.jpg" alt="">
+      										<p>Chicken Burger</p>
+      									</div>
+      								</div>
+      								<div class="col-md-4">
+      									<div class="patel">
+      										<img style="margin-bottom: 10px;" src="images/chickenPizza.jpg" alt="">
+      										<p>Beef Burger</p>
+      									</div>
+      								</div>
+      								<div class="col-md">
+      									<div class="patel">
+      										<img style="margin-bottom: 10px;" src="images/beefBurger.jpg" alt="">
+      										<p>Chicken Pizza</p>
+      									</div>
+
+      								</div>
+      								<span id="spanright"> > </span>
+
+      							</div>
+      						</div>
+      <!-- 						<div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="profile-tab">
+
+      						</div>  -->
+
+      					</div>
+      				</div>
+
+
+
+    </div>
+l  <div class="row well">
+    <div class="col-md-8 text-center">
+
+      <br></br><br></br>
+      <div>
+
+<div id="customersection">
+
+</div>
+      <h3 class="txt-orange">Our happy Customers</h3>
+
+      <h4>George Richard</h4>
+      <p>Great food Menu is awesome, their foods are not only great but also in the right price. I'll highly recommend them.
+      </p>
+
+      <span class="glyphicon glyphicon-chavron-left"></span>
+      <div class="row">
+              <div class="col-md-6 col-md-offset-3">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="images/p1.png" alt="">
+                  </div>
+                  <div class="col-md-4">
+                    <img src="images/p2.png" alt="">
+                  </div>
+                  <div class="col-md-4">
+                    <img src="images/p3.png" alt="">
+                  </div>
+                </div>
+              </div>
+  </div>
+      <span class="glyphicon glyphicon-chavron-right"></span>
+</div>
+    </div>
+    <br></br><br></br>
+    <div class="col-md-4 text-center">
+
+      <h2 class="txt-orange">About Menu</h2>
+      <p>
+        We are mainly a little team of 7 members Great food Menu is awesome, their foods are not only great but also in
+        the right price. I'll highly recommend them.</p>
+    </div>
+  </div>
+</div>
+
+
+</div>
+<div class="row" style="height:300px;">
+
+</div>
+</div>
+<br></br><br></br>
+
+<br></br>
+<div>
+<div class="footer">
+<div class="email_section">
+  <h3 class="txt-white">Get our daily food items delivered to your email</h3>
+  <form class="form-inline">
+    <div class="form-group">
+      <input type="text" class="form-control">
+      <button class="btn btn-warning">subscribe</button>
+    </div>
+  </form>
+</div>
+<div class="footer-menu">
+  <h2 class="txt-white"><img src="images/logo_white.png" alt=""> MENU</h2>
+  <p>Thats what we are</p>
+  <div class="social-media">
+    <img src="images/facebook.png"  alt="">
+    <img src="images/twitter.png" alt="">
+    <img src="images/pinterest.png" alt="">
+  </div>
+  <p>2016 menu restaurant</p>
+</div>
+</div>
+
+
+<script>
+function openNav() {
+    document.getElementById("myNav").style.width = "100%";
+}
+
+function closeNav() {
+    document.getElementById("myNav").style.width = "0%";
+}
+</script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+
+  </script>
   </body>
 
 
