adde javascript and css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<DOCTYPE html>
-  <html>
+<!DOCTYPE html>
+<html>
 
-  <head>
-    <title>Anita's Kitchen</title>
-    <link rel="css/bootstrap.css" type="text/css" rel="stylesheet" />
-    <link rel="css/styles.css" type="text/css" rel="stylesheet" />
-    <script src="js/scripts.js"></script>
-  </head>
+<head>
 
-  <body>
+  <meta charset="utf-8">
+  <title>Anitta's Kitchen</title>
+  <meta name="description" content="kitchen Website">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
-    <div class="headernav">
+<body>
+
+  <div class="headernav">
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
 
@@ -257,7 +260,5 @@ function closeNav() {
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 
   </script>
-  </body>
-
-
-  </html>
+</body>
+</html>
