edited the readme file

--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
 <body>
 
   <div class="headernav">
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
 
   <img class="bg-image" src="images/landing.jpg">
   <div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="overlay-content">
-    <a href="#">About</a>
-    <a href="#">events</a>
-    <a href="#">Contact</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="#">About</a>
+      <a href="#">events</a>
+      <a href="#">Contact</a>
+    </div>
   </div>
-</div>
 
   <div class="middle">
     <img src="images/logoBig.png" alt="logo" class="text-center">
     <br/>
-    <p>We Provide The Best Food
-      <p>
+    <p>We Provide The Best Cuisines</p>
         <p>At the<strong> right price<strong></p>
   </div>
 </div>
@@ -79,9 +78,7 @@
         <h2>Fast Food</h2>
         <h4>You'll love our delicious food.</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
         </p>
          <button class="btn btn-outline-primary">VIEW GALLERY &#8594;</button>
       </div>
@@ -95,9 +92,7 @@
         <h2>Drinks</h2>
         <h4>We also produce delicious drinks.</h4>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
         </p>
         <a href="" class="btn btn-outline-primary">VIEW GALLERY &#8594;</a>
       </div>
@@ -123,9 +118,7 @@
       				<li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Drinks</a></li>
       				  <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Chicken</a></li>
       				   <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Rice</a></li>
-
-
-      					</ul>
+               </ul>
       					<div class="tab-content" id="myTabContent">
       						<div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="home-tab">
 
@@ -156,9 +149,6 @@
 
       							</div>
       						</div>
-      <!-- 						<div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="profile-tab">
-
-      						</div>  -->
 
       					</div>
       				</div>
@@ -177,7 +167,7 @@ l  <div class="row well">
 </div>
       <h3 class="txt-orange">Our happy Customers</h3>
 
-      <h4>George Richard</h4>
+      <h4>Patrick Smith</h4>
       <p>Great food Menu is awesome, their foods are not only great but also in the right price. I'll highly recommend them.
       </p>
 
@@ -205,7 +195,7 @@ l  <div class="row well">
 
       <h2 class="txt-orange">About Menu</h2>
       <p>
-        We are mainly a little team of 7 members Great food Menu is awesome, their foods are not only great but also in
+        We are mainly a little team of 5 members Great food Menu is awesome, their foods are not only great but also in
         the right price. I'll highly recommend them.</p>
     </div>
   </div>
@@ -232,14 +222,14 @@ l  <div class="row well">
   </form>
 </div>
 <div class="footer-menu">
-  <h2 class="txt-white"><img src="images/logo_white.png" alt=""> MENU</h2>
+  <h2 class="txt-white"><img src="images/logo_white.png" alt="log white"> MENU</h2>
   <p>Thats what we are</p>
   <div class="social-media">
-    <img src="images/facebook.png"  alt="">
-    <img src="images/twitter.png" alt="">
-    <img src="images/pinterest.png" alt="">
+    <img src="images/facebook.png"  alt="Facebook">
+    <img src="images/twitter.png" alt="Twitter">
+    <img src="images/pinterest.png" alt="Piniterest">
   </div>
-  <p>2016 menu restaurant</p>
+  <p> @ 2017 </p>
 </div>
 </div>
 
