added some css styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
@@ -122,7 +123,8 @@
       					<div class="tab-content" id="myTabContent">
       						<div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="home-tab">
 
-      							<div class="row"
+      							<div class="row">
+                    </div>
       							style="padding: 20px;padding-right: 35px;padding-left: 35px;">
       								<span id="spanleft"><</span>
       								<div class="col-md-4">
@@ -229,7 +231,7 @@ l  <div class="row well">
     <img src="images/twitter.png" alt="Twitter">
     <img src="images/pinterest.png" alt="Piniterest">
   </div>
-  <p> @ 2017 </p>
+  <p> Copyright @ 2017 Patrick Ngare </p>
 </div>
 </div>
 
@@ -248,6 +250,7 @@ function closeNav() {
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
+    <script type="text/javascript" src="js/jquery-3.2.1.js">
 
   </script>
 </body>
