removing text size bugs

--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
 
   <div class="headernav">
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
 
   <img class="bg-image" src="images/landing.jpg">
   <div id="myNav" class="overlay">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div class="overlay-content">
-      <a href="#">About</a>
-      <a href="#">events</a>
-      <a href="#">Contact</a>
-    </div>
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
+    <a href="#">About</a>
+    <a href="#">events</a>
+    <a href="#">Contact</a>
   </div>
+</div>
 
   <div class="middle">
     <img src="images/logoBig.png" alt="logo" class="text-center">
     <br/>
-    <p>We Provide The Best Cuisines</p>
+    <p>We Provide The Best Food
+      <p>
         <p>At the<strong> right price<strong></p>
   </div>
 </div>
@@ -79,7 +79,9 @@
         <h2>Fast Food</h2>
         <h4>You'll love our delicious food.</h4>
         <p>
-          Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
         </p>
          <button class="btn btn-outline-primary">VIEW GALLERY &#8594;</button>
       </div>
@@ -93,7 +95,9 @@
         <h2>Drinks</h2>
         <h4>We also produce delicious drinks.</h4>
         <p>
-          Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content. This is required when, for example, the final text is not yet available. Dummy text is also known as 'fill text'. It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni quas, ab eum optio repudiandae quis id, quam.
         </p>
         <a href="" class="btn btn-outline-primary">VIEW GALLERY &#8594;</a>
       </div>
@@ -119,12 +123,13 @@
       				<li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Drinks</a></li>
       				  <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Chicken</a></li>
       				   <li role="presentation" class=""><a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">Rice</a></li>
-               </ul>
+
+
+      					</ul>
       					<div class="tab-content" id="myTabContent">
       						<div class="tab-pane fade active in" role="tabpanel" id="home" aria-labelledby="home-tab">
 
-      							<div class="row">
-                    </div>
+      							<div class="row"
       							style="padding: 20px;padding-right: 35px;padding-left: 35px;">
       								<span id="spanleft"><</span>
       								<div class="col-md-4">
@@ -151,6 +156,9 @@
 
       							</div>
       						</div>
+      <!-- 						<div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="profile-tab">
+
+      						</div>  -->
 
       					</div>
       				</div>
@@ -169,7 +177,7 @@ l  <div class="row well">
 </div>
       <h3 class="txt-orange">Our happy Customers</h3>
 
-      <h4>Patrick Smith</h4>
+      <h4>George Richard</h4>
       <p>Great food Menu is awesome, their foods are not only great but also in the right price. I'll highly recommend them.
       </p>
 
@@ -197,7 +205,7 @@ l  <div class="row well">
 
       <h2 class="txt-orange">About Menu</h2>
       <p>
-        We are mainly a little team of 5 members Great food Menu is awesome, their foods are not only great but also in
+        We are mainly a little team of 7 members Great food Menu is awesome, their foods are not only great but also in
         the right price. I'll highly recommend them.</p>
     </div>
   </div>
@@ -224,14 +232,14 @@ l  <div class="row well">
   </form>
 </div>
 <div class="footer-menu">
-  <h2 class="txt-white"><img src="images/logo_white.png" alt="log white"> MENU</h2>
+  <h2 class="txt-white"><img src="images/logo_white.png" alt=""> MENU</h2>
   <p>Thats what we are</p>
   <div class="social-media">
-    <img src="images/facebook.png"  alt="Facebook">
-    <img src="images/twitter.png" alt="Twitter">
-    <img src="images/pinterest.png" alt="Piniterest">
+    <img src="images/facebook.png"  alt="">
+    <img src="images/twitter.png" alt="">
+    <img src="images/pinterest.png" alt="">
   </div>
-  <p> Copyright @ 2017 Patrick Ngare </p>
+  <p>2016 menu restaurant</p>
 </div>
 </div>
 
@@ -250,7 +258,6 @@ function closeNav() {
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
-    <script type="text/javascript" src="js/jquery-3.2.1.js">
 
   </script>
 </body>
