--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
 
   <div class="headernav">
-  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
 
   <img class="bg-image" src="images/landing.jpg">
   <div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <div class="overlay-content">
-    <a href="#">About</a>
-    <a href="#">events</a>
-    <a href="#">Contact</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div class="overlay-content">
+      <a href="#">About</a>
+      <a href="#">events</a>
+      <a href="#">Contact</a>
+    </div>
   </div>
-</div>
 
   <div class="middle">
     <img src="images/logoBig.png" alt="logo" class="text-center">
@@ -156,17 +156,16 @@
 
       							</div>
       						</div>
-      <!-- 						<div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="profile-tab">
+      				<div class="tab-pane fade" role="tabpanel" id="profile" aria-labelledby="profile-tab">
 
-      						</div>  -->
-
+      						</div>
       					</div>
       				</div>
 
 
 
     </div>
-l  <div class="row well">
+ <div class="row well">
     <div class="col-md-8 text-center">
 
       <br></br><br></br>
@@ -239,7 +238,7 @@ l  <div class="row well">
     <img src="images/twitter.png" alt="">
     <img src="images/pinterest.png" alt="">
   </div>
-  <p>2016 menu restaurant</p>
+  <p>2017 menu restaurant</p>
 </div>
 </div>
 
